[package]
name = "quick_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.38.0", features = ["full"]}
tokio-util = {version = "0.7.11"}
tokio-postgres = {version = "0.7.10", features = ["with-chrono-0_4"]}
native-tls = { version = "0.2.12"}
postgres-native-tls = { version = "0.5.0"}
async-trait = { version = "0.1.80"}
futures = { version = "0.3.30"}
chrono = {version = "0.4.26", features = ["serde"]}